--- a/src/style/style.css
+++ b/src/style/style.css
@@ -7,6 +7,16 @@
   background-color: blue;
   margin: 5px;
 }
+
+.player-start-grid {
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
+  grid-template-rows: repeat(10, 1fr);
+  width: 200px;
+  height: 200px;
+  background-color: blue;
+  margin: 5px;
+}
  
 .tile-div {
   border: black solid 1px;
