--- a/src/style/style.css
+++ b/src/style/style.css
@@ -3,13 +3,13 @@
   display: grid;
   grid-template-columns: repeat(10, 1fr);
   grid-template-rows: repeat(10, 1fr);
-  width: 250px;
-  height: 250px;
+  width: 400px;
+  height: 400px;
   background-color: blue;
   margin: 5px;
 }
 
-/* drag and drop fleet */
+/* drag and drop fleet ///////////////////////// */
 #human-fleet {
   margin-left: 10px;
 }
@@ -72,6 +72,8 @@
   width: 25px;
   background: orangered;
 }
+
+
 
 
 /* change player grid display on start */
