--- a/src/style/style.css
+++ b/src/style/style.css
@@ -45,6 +45,13 @@
   width: 25px;
 }
 
+.dragenter {
+  background-color: rgb(106, 250, 250);
+}
+
+.dragenter-on {
+  background-color: rgb(194, 16, 194);
+}
 
 
 
