--- a/src/style/style.css
+++ b/src/style/style.css
@@ -49,6 +49,10 @@
   background-color: rgb(106, 250, 250);
 }
 
+.dragenter-highlight {
+  background-color: rgb(106, 250, 250);
+}
+
 .dragenter-on {
   background-color: rgb(194, 16, 194);
 }
