--- a/src/style/style.css
+++ b/src/style/style.css
@@ -45,21 +45,14 @@
   width: 25px;
 }
 
-.dragenter {
+.dragenter-active {
   background-color: rgb(106, 250, 250);
 }
 
-.dragenter-highlight {
-  background-color: rgb(106, 250, 250);
-}
-
-.highlight-fade {
+.dragleave-fade {
   background-color: rgb(50, 119, 119);
 }
 
-.dragenter-on {
-  background-color: rgb(50, 119, 119);
-}
 
 /* change player grid display on start */
 .player-start-grid {
