--- a/src/style/style.css
+++ b/src/style/style.css
@@ -117,7 +117,7 @@ background: purple;
   margin: 1px;
 }
 
-.ship-section {
+.ship-health {
   display: inline-block;
   margin: 1px;
   border: 1px black solid;
@@ -126,6 +126,6 @@ background: purple;
   background: lightgrey;  
 }
 
-.section-hit {
+.health-hit {
   background: maroon;
 }
