--- a/src/style/style.css
+++ b/src/style/style.css
@@ -45,6 +45,33 @@
   width: 25px;
 }
 
+#drag-image {
+  display: inline-block;
+  position: absolute;
+  top: -1000px;
+  color: antiquewhite;
+  font-family: 'Courier New', Courier, monospace;
+  padding: 1em 4em 1em 1em;
+  overflow: hidden;
+}
+
+#drag-image::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #000;
+  -webkit-transform-origin: 100% 0;
+  -ms-transform-origin: 100% 0;
+  transform-origin: 100% 0;
+  -webkit-transform: skew(-45deg);
+  -ms-transform: skew(-45deg);
+  transform: skew(-45deg);
+  z-index: -1;  
+}
+
 
 /* tiles for placment phase*/
 .dragenter-active {
@@ -108,6 +135,7 @@ background: purple;
   background-color: blue;
   margin: 5px;
 }
+
 /* enemy fleet */
 #enemy-fleet {
   margin: 5px;  
