--- a/src/style/scss/style.scss
+++ b/src/style/scss/style.scss
@@ -1,4 +1,4 @@
-/* render both grids as per point in game */
+/* render both grids as required in game ////////*/
 .rendered-grid-div {
   display: grid;
   grid-template-columns: repeat(10, 1fr);
@@ -9,7 +9,7 @@
   margin: 5px;
 }
 
-/* drag and drop fleet ///////////////////////// */
+/* drag and drop fleet /////////////////////////*/
 #human-fleet {
   margin-left: 10px;
 }
@@ -45,6 +45,7 @@
   width: 25px;
 }
 
+/* drag js image ////////////////////////////////*/
 #drag-image {
   display: inline-block;
   position: absolute;
@@ -54,7 +55,6 @@
   padding: 1em 4em 1em 1em;
   overflow: hidden;
 }
-
 #drag-image::after {
   content: '';
   position: absolute;
@@ -73,22 +73,22 @@
 }
 
 
-/* tiles for placment phase*/
+/* tiles for placment phase /////////////////////*/
 .dragenter-active {
   background-color: rgb(106, 250, 250);
 }
-
 .dragleave-fade {
   background-color: rgb(50, 119, 119);
 }
 
  
-/* tiles */
+/* tiles for game phase /////////////////////////*/
 .tile-div {
   border: black solid 1px;
 }
 .occupied {
   background-color: darkgray;
+  border-radius: 5px;
 }
 .hit {
 background: purple;
@@ -98,17 +98,16 @@ background: purple;
 }
 
 [data-sec-ref="0"] {
-  cursor: pointer;  
+  cursor: pointer; 
 }
 
-/* wiggle */
+/* wiggle ///////////////////////////////////////*/
 .wiggle {
-    animation: shake 1s cubic-bezier(.36,.07,.19,.97) both;
+  animation: shake 1s cubic-bezier(.36,.07,.19,.97) both;
   transform: translate3d(0, 0, 0);
   backface-visibility: hidden;
   perspective: 1000px;
 }
-
 @keyframes shake {
   0% { transform: rotate(0deg); }
   10% { transform: rotate(-10deg); }
@@ -123,20 +122,19 @@ background: purple;
 }
 
 
-/* change player grid display on start */
+/* change player grid display on start //////////*/
 .player-start-grid {
   display: grid;
   grid-template-columns: repeat(10, 1fr);
   grid-template-rows: repeat(10, 1fr);
   width: 200px;
   height: 200px; 
-  /* BACKGROUND COLOR IS SPECIFIC HERE NEEDS TO BE CHANGED ON STYLING */
-  /* JNSAJFNLASJNOFISAHOEURP)IUWPFJSAMFPASJFPAOSFJAPFOJASPFOJASPFOJAP */
+  /* BACKGROUND COLOUR - manual on making small? */
   background-color: lightgray;
   margin: 5px;
 }
 
-/* enemy fleet */
+/* enemy fleet //////////////////////////////////*/
 #enemy-fleet {
   margin: 5px;  
 }
@@ -159,8 +157,12 @@ background: purple;
 }
 
 
-/* ////////////////////////////////////////////////////////////////// */
+/* //////////////////////////////////////////////*/
 /* BEGIN STYLING */
+
+
+
+
 
 body {
   background-color: #D7C9AA;
@@ -171,10 +173,11 @@ body {
   height: 100%;
   background-color: #D7C9AA;
   padding: 20px;
-  border: 3px solid black;
+  border: 2px solid black;
   margin: 40px;
 }
 
 #title-div h1 {
   font-size: 20px;
+
 }
