--- a/src/style/scss/grid.scss
+++ b/src/style/scss/grid.scss
@@ -1,30 +1,38 @@
-#human-fleet {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(4, 1fr);
+#game-container {
+  
+  #human-fleet {
+    width: fit-content;
+    margin: 20px auto;
+    display: grid;
+    gap: 5px;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    align-items: center;
+    justify-items: center;
 
-  #drag-carrier {
-    grid-area: 1 / 1 / 2 / 5 ;
-  }
-  #drag-battleship {
-    grid-area: 1 / 5 / 2 / 3;
-  }
-  #drag-cruiser {
-    grid-area: 1 / 3 / 3 / 4;
-  } 
-  #drag-submarine {
-    grid-area: 3 / 5 / 3 / 4;
-  }    
-  #drag-destroyer{
-    grid-area: 1 / 2 / 3 / 4;
-  } 
-  #drag-frigate {
-    grid-area: 2 / 3 / 3 / 4;
-  }
-  #drag-corvette {
-    grid-area: 3 / 4 / 3 / 4;
-  } 
-  #drag-gunboat {
-    grid-area: 4 / 5 / 3 / 4;
+    #drag-carrier {
+      grid-area: 1 / 2 / 2 / 3 ;
+    }
+    #drag-battleship {
+      grid-area: 2 / 2 / 3 / 3;
+    }
+    #drag-cruiser {
+      grid-area: 3 / 1 / 4 / 2;
+    } 
+    #drag-submarine {
+      grid-area: 3 / 3 / 4 / 4;
+    }    
+    #drag-destroyer{
+      grid-area: 2 / 1 / 3 / 2;      
+    } 
+    #drag-frigate {
+      grid-area: 2 / 3 / 3 / 4;
+    }
+    #drag-corvette {
+      grid-area: 1 / 1 / 2 / 2;
+    } 
+    #drag-gunboat {
+      grid-area: 1 / 3 / 2 / 4;
+    }
   }
 }
