--- a/src/style/scss/style.scss
+++ b/src/style/scss/style.scss
@@ -1,3 +1,7 @@
+// * {
+//   border: 1px solid #f00 !important;
+// }
+
 $colors: (
   green: #19535F,
   pine: #0b7a75,
@@ -12,10 +16,17 @@ $colors: (
   @return map-get($colors, $color-name)
 };
 
-$desktop: 1280px;
+$desktop: 1080px;
+$five: 500px;
 
 @mixin desktop {
   @media (min-width: #{$desktop}) {
+    @content;
+  }
+}
+
+@mixin five {
+  @media (min-width: #{$five}) {
     @content;
   }
 }
@@ -29,7 +40,16 @@ body {
 }
 
 #page-container {
-  height: 100%;
+  height: 100vh;
+
+  #app-container {
+    @include desktop {
+     padding: 40px
+    }
+    @include five {
+      padding: 40px
+    }
+  }
 }
 
 #title-div {
@@ -78,9 +98,30 @@ body {
     @include desktop {
       display: grid;
       grid-template-columns: 1fr 1fr;
+      grid-template-rows: 2fr 5fr;
+      padding: 20px 20px 10px;
+    }
+    
+    #drag-instruction {
+      display: none;
+
+
+      @include desktop {
+        font-size: 13px;
+        grid-area: 1 / 2 / 2 / 3;
+        display: block;
+        width: 341px;
+        margin: 5px auto 0px 20px;
+        border: 3px solid color(dutch-darken);
+        padding: 10px;
+      }
+
+      li {
+        padding: 2px;
+      }
     }
 
-    #human-fleet {     
+    #human-fleet {
       display: grid;
       gap: 5px;
       grid-template-columns: repeat(3, 1fr);
@@ -91,11 +132,11 @@ body {
       justify-items: center;
 
       @include desktop {
-        grid-area: 1 / 2 / 2 / 3;
-        margin: 40px 40px;
-        padding: 10px;
-        border: 1px solid black;
-        border-radius: 6px;
+        grid-area: 2 / 2 / 3 / 3;
+        margin: 20px 20px 5px 20px;
+        padding: 10px 40px;
+        border: 3px solid color(dutch-darken);
+        border-radius: 3px;
         display: grid;
         grid-template-columns: 1fr 1fr;
         grid-template-rows: repeat(4, 1fr);
@@ -177,7 +218,8 @@ body {
     margin: auto;
 
     @include desktop {
-      grid-area: 1 / 1 / 2 / 2;
+      grid-area: 1 / 1 / 3 / 2;
+      margin-right: 20px;
     }
   }
 
@@ -216,13 +258,13 @@ body {
 
     button{
       text-decoration: none;
-      color: color(dutch);
+      color: #251F11;
       font-family: 'Courier New', Courier, monospace;
       font-weight: 600;
       padding: 10px;
       border: 2px solid color(dutch-darken);
       border-radius: 8px;
-      background-color: #251F11;
+      background-color: color(dutch);
 
       
       &:hover {
@@ -277,7 +319,7 @@ body {
 }
 
 /* //////////////////////////////////////////////*/
-/* Change grid display on start*/
+// /* Change grid display on start*/
 .player-start-grid {
   display: grid;
   grid-template-columns: repeat(10, 1fr);
@@ -339,7 +381,6 @@ body {
       grid-area: 1 / 2 / 2 / 3;
     }  
   }
-  
   
 }
 
