--- a/src/style/scss/style.scss
+++ b/src/style/scss/style.scss
@@ -17,7 +17,8 @@ $colors: (
 };
 
 $desktop: 1080px;
-$five: 500px;
+$fiveTitle: 500px;
+
 
 @mixin desktop {
   @media (min-width: #{$desktop}) {
@@ -25,272 +26,11 @@ $five: 500px;
   }
 }
 
-@mixin five {
-  @media (min-width: #{$five}) {
+@mixin fiveTitle {
+  @media (min-width: #{$fiveTitle}) {
     @content;
   }
 }
-
-/* //////////////////////////////////////////////*/
-/* BEGIN STYLING */
-
-body {
-  background-color: color(white);
-  font-family: 'Courier New', Courier, monospace;
-}
-
-#page-container {
-
-  @include desktop {
-    padding: 40px
-   }
-   @include five {
-     padding: 40px
-   }
-  height: 100vh;
-
-  #title-div {
-    position: relative;
-    margin-bottom: 20px;;
-  
-    .circle-shape-div {
-      display: inline-block;
-      position: absolute;
-      top: 10px;
-      left: 10px;
-      background-color: color(dutch);
-      height: 50px;
-      width: 50px;
-      border-radius: 50%;
-      padding: 30px 10px 10px 0px;
-      z-index: 1;
-    }
-    
-    h1 {
-      position: relative;
-      display: inline-block;
-      font-size: 25px;
-      padding: 25px 10px 10px 15px;
-      z-index: 2;
-    }
-  }
-   #app-wrapper {
-
-   }
-
-   #app-container {
-    
-    #instruction-div {
-      padding: 5px 5px 5px 15px;
-      width: fit-content;
-      max-width: 90%;
-      margin: 0px auto 10px auto;
-      border: 1px solid black;
-      border-radius: 3px;
-      
-      h2 {
-      font-size: 13px;
-      font-weight: 100;
-      }
-    }
-   }
-}
-
-
-
-
-
-#game-container {
-
-  #human-section {
-    @include desktop {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      grid-template-rows: 2fr 5fr;
-      padding: 20px 20px 10px;
-    }
-    
-    #drag-instruction {
-      display: none;
-
-      @include desktop {
-        font-size: 13px;
-        grid-area: 1 / 2 / 2 / 3;
-        display: block;
-        width: 341px;
-        margin: 5px auto 0px 20px;
-        border: 3px solid color(dutch-darken);
-        padding: 10px;
-      }
-
-      li {
-        padding: 2px;
-      }
-    }
-
-    #human-fleet {
-      display: grid;
-      gap: 5px;
-      grid-template-columns: repeat(3, 1fr);
-      grid-template-rows: repeat(3, 1fr);
-      width: fit-content;
-      margin: 10px auto 20px auto;
-      align-items: center;
-      justify-items: center;
-
-      @include desktop {
-        grid-area: 2 / 2 / 3 / 3;
-        margin: 20px 20px 5px 20px;
-        padding: 10px 40px;
-        border: 3px solid color(dutch-darken);
-        border-radius: 3px;
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: repeat(4, 1fr);
-      }
-      
-      .drag-ship {
-        border-radius: 2px;
-        border: 1px solid black;
-        height: 25px;
-        background-color: color(red);
-        cursor: pointer;
-
-        &:hover {
-          background-color: color(red-lighten);
-        }
-      }
-
-      #drag-carrier { 
-        width: 125px;
-        grid-area: 1 / 2 / 3 / 3 ;
-        @include desktop() {
-          grid-area: 1 / 2 / 2 / 3;;
-        }
-      }
-      #drag-battleship {
-        width: 100px;
-        grid-area: 2 / 2 / 4 / 3;
-        @include desktop() {
-          grid-area: 4 / 1 / 5 / 2;
-        }
-      }
-      #drag-cruiser {
-        width: 75px;
-        grid-area: 3 / 1 / 4 / 2;
-        @include desktop() {
-          grid-area: 3 / 1 / 4 / 2;
-        }
-      } 
-      #drag-submarine {
-        width: 75px;
-        grid-area: 3 / 3 / 4 / 4;
-        @include desktop() {
-          grid-area: 2 / 2 / 3 / 3;
-        }
-      }    
-      #drag-destroyer {
-        width: 50px;
-        grid-area: 2 / 1 / 3 / 2;
-        @include desktop() {
-          grid-area: 0 / 1 / 0 / 2;
-        }
-      } 
-      #drag-frigate {
-        width: 50px;
-        grid-area: 2 / 3 / 3 / 4;
-        @include desktop() {
-          grid-area: 3 / 2 / 4 / 3;
-        }
-      }
-      #drag-corvette {
-        width: 25px;
-        grid-area: 1 / 1 / 2 / 2;
-        @include desktop() {
-          grid-area: 4 / 2 / 5 / 3;
-        }
-      } 
-      #drag-gunboat {
-        width: 25px;
-        grid-area: 1 / 3 / 2 / 4;
-        @include desktop() {
-          grid-area: 1 / 1 / 2 / 2;
-        }
-      }
-    }
-  }
-
-  #human-grid {
-    width: fit-content;
-    margin: auto;
-
-    @include desktop {
-      grid-area: 1 / 1 / 3 / 2;
-      margin-right: 20px;
-    }
-  }
-
-  #enemy-fleet {
-    margin: 10px 25px;
-    
-    .fleet-ship {
-      margin: 1px;
-
-      .ship-health {
-        display: inline-block;
-        margin: 2px 2px 0px;
-        border: 1px black solid;
-        border-radius: 1px;
-        height: 10px;
-        width: 15px;
-        background: lightgrey;  
-      }
-    
-      .health-hit {
-        background: blue;
-        // Maybe whole ship sunk styling
-      }
-    }
-  }  
-}
-
-#button-div {
-  display: flex;
-  justify-content: center;  
-    
-  #auto-place-div,
-  #start-div {
-    display: inline-block;
-    margin: 20px 15px 15px 10px;
-
-    button{
-      text-decoration: none;
-      color: #251F11;
-      font-family: 'Courier New', Courier, monospace;
-      font-weight: 600;
-      padding: 10px;
-      border: 2px solid color(dutch-darken);
-      border-radius:20px;
-      background-color: color(dutch);
-      
-      &:hover {
-       
-      } 
-      &:focus {
-        outline: none;
-      }
-      &:active {
-        transform: scale(0.95);
-      }
-    }
-  }
-
-
-
-}
-
-
-
 
 /* //////////////////////////////////////////////*/
 /* New render grid*/
@@ -324,9 +64,238 @@ body {
   }
 }
 
-/* //////////////////////////////////////////////*/
-// /* Change grid display on start*/
-.player-start-grid {
+/* //////////////////////////////////////////////////////////////////*/
+/* BEGIN STYLING */
+
+body {
+  background-color: color(white);
+  font-family: 'Courier New', Courier, monospace;
+}
+
+#page-container {
+  height: 100vh;
+  @include desktop {
+    padding: 40px
+  }
+   @include fiveTitle {
+     padding: 40px
+  }  
+
+  #title-div {
+    position: relative;
+    margin-bottom: 20px;;
+  
+    .circle-shape-div {
+      display: inline-block;
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      background-color: color(dutch);
+      height: 50px;
+      width: 50px;
+      border-radius: 50%;
+      padding: 30px 10px 10px 0px;
+      z-index: 1;
+    }
+    
+    h1 {
+      color: #382E1A;
+      position: relative;
+      display: inline-block;
+      font-size: 25px;
+      padding: 25px 10px 10px 15px;
+      z-index: 2;
+    }
+  }
+   #app-wrapper {
+     display: flex;
+     justify-content:  center;
+     align-items: center;
+     @include fiveTitle {
+      min-height: calc(100% - (60px));
+     }
+   }
+}
+
+#app-container {
+  #instruction-div {
+    padding: 5px 5px 5px 15px;
+    width: fit-content;
+    max-width: 90%;
+    margin: 0px auto 10px auto;
+    border-radius: 3px;
+    
+    h2 {
+    font-size: 14px;
+    font-weight: 100;
+    }
+  }
+  
+  #game-container {
+  
+    #human-section {
+      @include desktop {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 2fr 5fr;
+        padding: 20px 20px 10px;
+      }
+      
+      #drag-instruction {
+        display: none;
+        @include desktop {
+          display: block;        
+          grid-area: 1 / 2 / 2 / 3;        
+          width: 341px;
+          margin: 5px auto 0px 20px;
+          border: 3px solid color(dutch-darken);
+          padding: 10px;
+          font-size: 13px;
+        }
+  
+        li {
+          padding: 2px;
+        }
+      }
+  
+      #human-fleet {
+        display: grid;
+        gap: 5px;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        width: fit-content;
+        margin: 10px auto 20px auto;
+        align-items: center;
+        justify-items: center;
+        @include desktop {
+          grid-area: 2 / 2 / 3 / 3;
+          margin: 20px 20px 5px 20px;
+          padding: 10px 40px;
+          border: 3px solid color(dutch-darken);
+          border-radius: 3px;
+          display: grid;
+          grid-template-columns: 1fr 1fr;
+          grid-template-rows: repeat(4, 1fr);
+        }
+        
+        .drag-ship {
+          border-radius: 2px;
+          border: 1px solid black;
+          height: 25px;
+          background-color: color(red);
+          cursor: pointer;
+          &:hover {
+            background-color: color(red-lighten);
+          }
+        }
+  
+        #drag-carrier { 
+          width: 125px;
+          grid-area: 1 / 2 / 3 / 3 ;
+          @include desktop() {
+            grid-area: 1 / 2 / 2 / 3;;
+          }
+        }
+        #drag-battleship {
+          width: 100px;
+          grid-area: 2 / 2 / 4 / 3;
+          @include desktop() {
+            grid-area: 4 / 1 / 5 / 2;
+          }
+        }
+        #drag-cruiser {
+          width: 75px;
+          grid-area: 3 / 1 / 4 / 2;
+          @include desktop() {
+            grid-area: 3 / 1 / 4 / 2;
+          }
+        } 
+        #drag-submarine {
+          width: 75px;
+          grid-area: 3 / 3 / 4 / 4;
+          @include desktop() {
+            grid-area: 2 / 2 / 3 / 3;
+          }
+        }    
+        #drag-destroyer {
+          width: 50px;
+          grid-area: 2 / 1 / 3 / 2;
+          @include desktop() {
+            grid-area: 0 / 1 / 0 / 2;
+          }
+        } 
+        #drag-frigate {
+          width: 50px;
+          grid-area: 2 / 3 / 3 / 4;
+          @include desktop() {
+            grid-area: 3 / 2 / 4 / 3;
+          }
+        }
+        #drag-corvette {
+          width: 25px;
+          grid-area: 1 / 1 / 2 / 2;
+          @include desktop() {
+            grid-area: 4 / 2 / 5 / 3;
+          }
+        } 
+        #drag-gunboat {
+          width: 25px;
+          grid-area: 1 / 3 / 2 / 4;
+          @include desktop() {
+            grid-area: 1 / 1 / 2 / 2;
+          }
+        }
+      }
+      #human-grid {
+        width: fit-content;
+        margin: auto;  
+        @include desktop {
+          grid-area: 1 / 1 / 3 / 2;
+          margin-right: 20px;
+        }
+      }
+    }
+  }
+  
+  #button-div {
+    display: flex;
+    justify-content: center;  
+      
+    #auto-place-div,
+    #start-div {
+      display: inline-block;
+      margin: 20px 15px 15px 10px;
+  
+      button{
+        cursor: pointer;
+        text-decoration: none;
+        font-family: 'Courier New', Courier, monospace;
+        font-weight: 600;
+        padding: 10px;
+        border: 2px solid color(dutch-darken);
+        border-radius:20px;
+        color: #251F11;
+        background-color: color(dutch);
+        
+        &:hover {
+          // something
+        } 
+        &:focus {
+          outline: none;
+        }
+        &:active {
+          transform: scale(0.95);
+        }
+      }
+    }  
+  }    
+}
+
+
+
+/* //////////////////////////////////////////////////////////////////*/
+/* Changes on start*/
+.rendered-grid-div.game-start { //i.e. Human Grid
   display: grid;
   grid-template-columns: repeat(10, 1fr);
   grid-template-rows: repeat(10, 1fr);
@@ -334,6 +303,9 @@ body {
   height: 150px; 
   background-color: color(pine); // CHANGE
   margin: 10px;
+  @include desktop {
+
+  }
   
   .tile-div {
     border-radius: 3px;
@@ -348,37 +320,52 @@ body {
   }
   .miss {
     background: lightblue; // CHANGE
-  }   
+  }
 }
 
-
-.game-start-grid {
+/*Layout */
+#game-container.game-start{
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 175px 1fr;
-
   @include desktop {
     grid-template-columns: 1fr 2fr 1fr;
     grid-template-rows: 1fr;;
-  }  
-
-  #human-grid {
-    grid-area: 1 / 1 / 2 / 2;
-    position: absolute;
-    right: 50%;
-    @include desktop {
-      position: inherit;
-      grid-area: 1 / 1 / 2 / 2 ;
-    }  
   }
+
   
 
   #enemy-fleet {
     grid-area: 1 / 2 / 2 / 3;
+    margin: 10px 25px;
     @include desktop {
       grid-area: 1 / 3 / 2 / 4;
     }  
-  }
+
+    #enemy-title {
+      // color: #251F11;
+      color: #382E1A;
+    }
+    
+    .fleet-ship {
+      margin: 1px;
+
+      .ship-health {
+        display: inline-block;
+        margin: 2px 2px 0px;
+        border: 1px black solid;
+        border-radius: 1px;
+        height: 10px;
+        width: 15px;
+        background: lightgrey;  
+      }
+    
+      .health-hit {
+        background: blue;
+        // Maybe whole ship sunk styling
+      }
+    }
+  }  
 
   #computer-grid {
     grid-area: 2 /1 / 3 / 3;
@@ -390,7 +377,14 @@ body {
   
 }
 
-/* //////////////////////////////////////////////*/
+#game-container.game-start #human-section.game-start {
+  @include desktop{
+    background-color: black;
+    display: block;
+  }
+}
+
+/* //////////////////////////////////////////////////////////////////*/
 /* Drag Styling */
 #drag-image {
   display: inline-block;
@@ -426,6 +420,9 @@ body {
   background-color: rgb(50, 119, 119);
 }
  
+
+/* //////////////////////////////////////////////////////////////////*/
+/* fx */
 .wiggle {
   animation: shake 1s cubic-bezier(.36,.07,.19,.97) both;
   transform: translate3d(0, 0, 0);
