--- a/src/style/scss/style.scss
+++ b/src/style/scss/style.scss
@@ -363,7 +363,7 @@ body {
     grid-template-columns: 1fr 2fr 1fr;
     grid-template-rows: 1fr;;
     align-items: center;
-    margin: 40px 20px 20px;
+    margin: 20px 20px 20px;
   }
 
   #enemy-fleet {
@@ -485,9 +485,15 @@ body {
   90% { transform: rotate(0deg); }
 }
 
+.stagger-highlight {
+  background-color: rgb(106, 250, 250);
+}
+
 canvas {
   position: absolute;
   z-index: -9999;
 }
+
+
 
 
